# CSE_230_Fall_2023

./: .gitignore  CHANGELOG.md  README.md  Sokoban.cabal  sokoban.cabal  stack.yaml  test.cabal
.devcontainer/: devcontainer.json
.stack-work/: stack.sqlite3
.stack-work/ghci/4d77185a/: cabal_macros.h
.stack-work/ghci/62b5b54d/: cabal_macros.h
.stack-work/ghci/c476f2d9/: cabal_macros.h
app/: Main.hs  Sokoban.hs  UI.hs
demo1/: demo1.cabal  snake.cabal  stack.yaml
demo1/.stack-work/: stack.sqlite3
demo1/.stack-work/ghci/3f658cf5/: cabal_macros.h
demo1/.stack-work/ghci/81f99b4b/: cabal_macros.h
demo1/.stack-work/ghci/bc02249a/: cabal_macros.h
demo1/dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
demo1/src/: Main.hs  Sokoban.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes
src/: LICENSE  Main.hs  Sokoban.cabal  Sokoban.hs  Test.hs  UI.cabal  UI.hs
src/app/: Main.hs  Sokoban.hs  Test.hs  UI.hs
src/test/: Counter.hs  Test.hs
test/: Test.hs
