name:                sokoban
version:             0.1.0.0
homepage:            https://github.com/CaiusDai/CSE_230_Fall_2023/blob/main/README.md
license:             BSD3
license-file:        LICENSE
author:              Leilong
copyright:           2023 Leilong
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sokoban
  hs-source-dirs:      src
  other-modules:       Sokoban
                     , UI
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  build-depends:       base         >= 4.7 && < 5
                     , brick
                     , containers
                     , extra
                     , linear
                     , lens
                     , random
                     , transformers
                     , vty
